--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# Resend API configuration
-RESEND_API_KEY=re_xxxx_your_resend_api_key_here
-RECIPIENT_EMAIL=your-email@example.com
+# Email configuration
+EMAIL_USER=team@protolaunch.io
+EMAIL_PASS=your-app-specific-password
