--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-# PrivateEmail SMTP configuration
-EMAIL_USER=team@protolaunch.io
-EMAIL_PASS=your-email-password
+# Email Configuration
+# SMTP settings for email functionality
+EMAIL_USER=your-email@domain.com
+EMAIL_PASS=your-secure-email-password
+
+# Add your production email settings to .env file
+# Do not commit the .env file to version control
