--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ EMAIL_PASS=your-secure-email-password
 
 # Add your production email settings to .env file
 # Do not commit the .env file to version control
+
+# SMTP Configuration
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@example.com
+SMTP_PASSWORD=your-smtp-password
+SMTP_FROM=your-email@example.com
+SMTP_TO=notifications@example.com
