--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.23",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
